[gd_scene load_steps=3 format=3 uid="uid://bnxqbywjyfwq1"]

[ext_resource type="PackedScene" uid="uid://bl3dduyi7q2nj" path="res://Src/Enemies/Waddler.tscn" id="1_ltcq2"]
[ext_resource type="Script" path="res://Src/SymbolMaker/battle_scene_1.gd" id="1_n8dcx"]

[node name="BattleScene1" type="Node2D"]
script = ExtResource("1_n8dcx")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="WaddlerPoint" type="Node2D" parent="."]
position = Vector2(128, -384)

[node name="WaddlerPoint2" type="Node2D" parent="."]
position = Vector2(-128, -384)

[node name="WaddlerPoint3" type="Node2D" parent="."]
position = Vector2(384, -288)

[node name="WaddlerPoint4" type="Node2D" parent="."]
position = Vector2(-384, -288)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.48
autostart = true

[node name="BG" type="Node2D" parent="."]

[node name="Waddler" parent="BG" instance=ExtResource("1_ltcq2")]
position = Vector2(-384, -640)

[node name="Waddler2" parent="BG" instance=ExtResource("1_ltcq2")]
position = Vector2(-128, -640)

[node name="Waddler3" parent="BG" instance=ExtResource("1_ltcq2")]
position = Vector2(128, -640)

[node name="Waddler4" parent="BG" instance=ExtResource("1_ltcq2")]
position = Vector2(384, -640)

[node name="Label" type="Label" parent="."]
offset_left = -960.0
offset_top = 352.0
offset_right = -920.0
offset_bottom = 375.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
